# trust

./: Cargo.toml  README.org
src/: errors.rs  genetics.rs  lib.rs  machines.rs  matches.rs  matrices.rs  players.rs  traits.rs  worm_bools.rs
